@@ -174,6 +174,13 @@ describe Kramdown::AsciiDoc::Cli do
       (expect $stdout.string).to eql expected
     end
 
+    it 'escapes bare URLs with --no-auto-links is used' do
+      the_source_file = scenario_file 'a/no-auto-links.md'
+      expected = IO.read scenario_file 'a/no-auto-links.adoc'
+      (expect subject.run %W(-o - --no-auto-links #{the_source_file})).to eql 0
+      (expect $stdout.string).to eql expected
+    end
+
     it 'shifts headings by offset when --heading-offset is used' do
       the_source_file = scenario_file 'heading/offset.md'
       expected = IO.read scenario_file 'heading/offset.adoc'
