@@ -1,0 +1,3 @@
+Search the web using \https://ecosia.org
+
+A URL begins with https://, though you'll still find sites using http://.
